# electric-organ

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  test.yml
ansi-terminal/: Cargo.toml
ansi-terminal/src/: main.rs
app/: Cargo.toml
app/src/: colours.rs  controls.rs  game_instance.rs  game_loop.rs  image.rs  lib.rs  music.rs  text.rs
app/src/music/: level.rs  level1.rs  level2.rs  menu.rs  mod.rs  sound_effects.rs  sound_effects_.rs
extras/macos-dmg/: README.txt
extras/unix/: README.md
extras/windows/: README.txt
game/: Cargo.toml
game/src/: ai.rs  lib.rs  terrain.rs  terrain.txt  witness.rs
game/src/realtime/: fade.rs  flicker.rs  light_colour_fade.rs  mod.rs  movement.rs  particle.rs
game/src/world/: action.rs  data.rs  explosion.rs  mod.rs  query.rs  spatial.rs  spawn.rs
ggez/: Cargo.toml
ggez/src/: main.rs
image-to-text/: Cargo.toml
native/: Cargo.toml
native/src/: lib.rs
procgen/: Cargo.toml
procgen/examples/: city.rs
procgen/src/: city.rs
scripts/: build_and_upload_web_version.sh  macos_run_app.sh  make_archives_unix.sh  make_dmg_macos.sh  make_zip_web.sh
sdl2/: Cargo.toml
sdl2/src/: main.rs
util/vector/src/: lib.rs
web/: Cargo.toml  README.md  index.html  package-lock.json  package.json
web/src/: lib.rs
wgpu/: Cargo.toml
wgpu/src/: main.rs
