[workspace]

resolver = "2" # this is required for the wgpu frontend

members = [
    "game",
    "app",
    "native",
    "ansi-terminal",
    "web",
    "wgpu",
    "sdl2",
    "util/vector",
    "util/rand-range",
    "util/rational",
    "procgen",
]

[profile.release]
lto = true

[patch.crates-io]
caw_core = { path = "/Users/s/src/caw/core" }
caw_player = { path = "/Users/s/src/caw/player" }
caw_modules = { path = "/Users/s/src/caw/modules" }
