[package]
name = "boat_journey_ansi_terminal"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies]
chargrid_ansi_terminal = "0.6"
env_logger = "0.11"
meap = "0.8"
boat_journey_app = { path = "../app" }
boat_journey_native = { path = "../native" }
rand = "0.8"
