[package]
name = "placeholder_web"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chargrid_web = "0.6"
general_storage_web = "0.3"
general_storage_static = "0.3"
app = { path = "../app", features = ["web", "print_log"]}
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"
